Starter på results

--- a/results.tex
+++ b/results.tex
@@ -1,1 +1,118 @@
-results
+\section{discussion} % (fold)
+\label{sec:discussion}
+
+\subsection{Retrospective Characteristics}
+In this section we will first describe some key characteristics found during our depth study. We will then continue describing the output, processes and impediments found in both of our studies. 
+
+\subsubsection{Key Characteristics}
+From our depth study of team Zulu we found some key numbers and these numbers can also be seen in \autoref{table:key-numbers}.The retrospective reports spanned over a period of five years from August 2009 to November 2014. This amounts to 278 weeks and we are going to refer to week numbers from the first retrospective for the remainder of this report. 
+\begin{table}[!h]
+	\begin{center}
+	\caption{Some key numbers from the retrospectives}
+	\label{table:key-numbers}
+	\makebox[\textwidth]{%
+		\begin{tabular}{ l | p{0.5\textwidth}}
+		\hline
+		Key-value & Value  \\
+		\hline
+		Retrospective report period & 278 Weeks \\
+		Number of total actions & 343 \\
+		Number of unresolved actions & 65 \\
+		Average actions per week & 1.23 \\
+		Average unresolved action per week & 0.23 \\
+		\hline
+		\end{tabular}
+	}
+\end{center}
+\end{table}
+
+\subsubsection{Learning Types in Depth Study}
+In terms of organizational learning each action in team Zulu's retrospective reports could be defined as single-loop, double-loop or undefined. The results yielded from the retrospective analysis showed that single-loop was the most occurring type of organizational learning with 66.4\% of the actions. Double-loop had 27.2\% of actions, and the rest was undefined at 6.4\%. The distribution over the timespan, \autoref{figure:learning-l} of the analysis showed that the three categories were evenly distributed. The active actions were very similar to the total amount of actions and only had some small negligible variances as can be seen in \autoref{table:organizational-learning-results}.
+
+\begin{table}[!h]
+	\begin{center}
+	\caption{Results from the content analysis regarding the organizational learning nature of the action.}
+	\label{table:organizational-learning-results}
+	\makebox[\textwidth]{%
+		\begin{tabular}{| l | l | l | l | l |}
+		\hline
+		Category & \multicolumn{2}{|c|}{All Actions} & \multicolumn{2}{|c|}{Active Actions}  \\
+		\cline{2-5}
+		& Number & Percentage & Number & Percentage \\	
+		\hline
+		Single-loop & 227 & 66.4\% & 41 & 66.1\% \\
+		Double-loop & 93 & 27.2\% & 16 & 25.8\% \\
+		Undefined & 22 & 6.4\% & 5 & 8.1\% \\
+		\hline
+		\end{tabular}
+	}
+	\end{center}
+\end{table}
+
+
+\subsubsection{Enthusiasm}
+Our case-studies revealed that enthusiasm both inflicted the retrospective and was affected by it. The results revealed that enthusiasm could create both a positive loop and a negative loop. They also revealed some factors that affected the enthusiasm, being oversight and ownership and trust. We will describe each below. 
+
+\paragraph{Positive Loop}
+Described by several teams, Alfa, Delta, Echo and Zulu, enthusiasm was able to be a part of a positive loop related to the retrospective. The loop could be described as the following:
+
+\begin{quote}
+\textit{If the retrospective produced any implementable actions and those actions were implemented it would produce more enthusiasm for the retrospective practice and therefore increase the chance of future actions actually being implemented.}
+\end{quote}
+
+It was emphasized that change was important for the retrospective practice by all the teams where the subject came up. It would produce enthusiasm and help improve the working practices. 
+
+\paragraph{Negative Loop}
+As two sides of a coin enthusiasm could, in addition to create a positive loop, create a negative loop. The SCRUM master of team Charlie told us that unresolved actions could create a negative loop, where enthusiasm for the retrospective went down as improvements never came and the low enthusiasm made sure fewer actions were implemented. And that it could be a challenge. 
+
+\paragraph{Oversight}
+From the second feedback session with team Zulu during the depth analysis we learned that oversight over implementation rate of actions had affected the retrospective. The team had not previously appreciated just how much had been accomplished, and that this had lead to a lower enthusiasm around the retrospective. When the team was confronted with the completion rate they were surprised and pleased with the amount they had accomplished. In order to continue this more objective oversight the team decided to create a dashboard in order to have better view of the statistics concerning implemented versus unimplemented actions as described in \autoref{dashboard}. 
+
+
+\paragraph{External Facilitator}
+There were different views on facilitating retrospectives. Several teams used an external facilitator and said that they would encourage others to do the same. The benefits was that the external facilitator was able to see things that existed within the team, that the team themselves were not aware of. The external facilitator was not hired as a facilitator, but rather a SCRUM master from another development team.
+
+The use of external facilitators was an interesting concept to team Zulu, and the one experience they had with using one had been a positive experience. When the team Zulu SCRUM master was asked about if he felt like a leader, or if the team viewed him as a leader, the SCRUM master said he felt more like a facilitator, and that he didn't think the team considered him a leader. Though he was mindful of this possibility. When asked about the inclusion of the project leader he considered as long as the team was not afraid to speak their minds this could make it easier to make strategic decisions.
+
+Other teams had not been using external facilitators. They used their regular SCRUM master. Common for the SCRUM masters were that they all felt like they were a facilitator rather than a leader during the retrospectives. Those we spoke to about external facilitators were positive to the idea and mentioned they might want to try it out in the future. 
+
+\begin{table}[!h]
+	\begin{center}
+	\caption{Usage of external facilitator}
+	\label{table:external-facilitator}
+	\makebox[\textwidth]{%
+		\begin{tabular}{ l | p{0.3\textwidth}}
+			External facilitator & Teams \\
+			\hline
+			Used external facilitator & Alfa, Echo \\
+			No external facilitator & Charlie, Delta, Foxtrot, Golf, Bravo \\
+		\end{tabular}
+	}
+	\end{center}
+\end{table}
+
+\subsubsection{Implementation}
+\label{question-6}
+The steps taken to implement actions created during the retrospective and whether unresolved actions were a problem varied between the interviewed teams. 
+
+\begin{table}[!h]
+	\begin{center}
+	\caption{Action Follow-Up Techniques Used}
+	\label{table:follow-up-techique}
+	\makebox[\textwidth]{%
+		\begin{tabular}{ l | l | l }
+		Team & Follow-up technique & Satisfied \\	
+		\hline
+		Echo, Delta, Alfa, Foxtrot, Zulu & Assigning Name to action & Yes \\
+		Charlie, Bravo & Assigning to group & No \\
+		Foxtrot & Adding to backlog & No \\
+		Delta & Visualizes Action & Yes \\
+		Echo, Golf & Handled by SCRUM-master & Yes \\
+		\hline
+		\end{tabular}
+	}
+	\end{center}
+\end{table}
+
+
+% section discussion (end)
