fikset resultat tabell

--- a/results.tex
+++ b/results.tex
@@ -1,4 +1,4 @@
-\section{discussion} % (fold)
+\section{Results} % (fold)
 \label{sec:discussion}
 
 \subsection{Retrospective Characteristics}
@@ -66,13 +66,11 @@ It was emphasized that change was important for the retrospective practice by al
 As two sides of a coin enthusiasm could, in addition to create a positive loop, create a negative loop. The SCRUM master of team Charlie told us that unresolved actions could create a negative loop, where enthusiasm for the retrospective went down as improvements never came and the low enthusiasm made sure fewer actions were implemented. And that it could be a challenge. 
 
 \paragraph{Oversight}
-From the second feedback session with team Zulu during the depth analysis we learned that oversight over implementation rate of actions had affected the retrospective. The team had not previously appreciated just how much had been accomplished, and that this had lead to a lower enthusiasm around the retrospective. When the team was confronted with the completion rate they were surprised and pleased with the amount they had accomplished. In order to continue this more objective oversight the team decided to create a dashboard in order to have better view of the statistics concerning implemented versus unimplemented actions as described in \autoref{dashboard}. 
+From the second feedback session with team Zulu during the depth analysis we learned that oversight over implementation rate of actions had affected the retrospective. The team had not previously appreciated just how much had been accomplished, and that this had lead to a lower enthusiasm around the retrospective. When the team was confronted with the completion rate they were surprised and pleased with the amount they had accomplished. 
 
 
 \paragraph{External Facilitator}
 There were different views on facilitating retrospectives. Several teams used an external facilitator and said that they would encourage others to do the same. The benefits was that the external facilitator was able to see things that existed within the team, that the team themselves were not aware of. The external facilitator was not hired as a facilitator, but rather a SCRUM master from another development team.
-
-The use of external facilitators was an interesting concept to team Zulu, and the one experience they had with using one had been a positive experience. When the team Zulu SCRUM master was asked about if he felt like a leader, or if the team viewed him as a leader, the SCRUM master said he felt more like a facilitator, and that he didn't think the team considered him a leader. Though he was mindful of this possibility. When asked about the inclusion of the project leader he considered as long as the team was not afraid to speak their minds this could make it easier to make strategic decisions.
 
 Other teams had not been using external facilitators. They used their regular SCRUM master. Common for the SCRUM masters were that they all felt like they were a facilitator rather than a leader during the retrospectives. Those we spoke to about external facilitators were positive to the idea and mentioned they might want to try it out in the future. 
 
