--- a/discussion.tex
+++ b/discussion.tex
@@ -2,7 +2,7 @@
 
 \subsection{Retrospective Characteristics}
 One of our research objectives was: \textit{What are the main characteristics in current retrospective practices, in
-terms of outcome, processes and impediments?} Throughout this section we will provide a descriptive discussion on the characteristics we have identified throughout our studies. The section is split into three parts: Output, Process Characteristics and Impediments. An overview of all the characteristics can be seen in \autoref{table:retrospective-properties}
+terms of outcome, processes and impediments?} . An overview of all the characteristics we identified can be seen in \autoref{table:retrospective-properties}
 
 \begin{table}[h]
 	\begin{center}
@@ -46,7 +46,7 @@ terms of outcome, processes and impediments?} Throughout this section we will pr
 Through our studies we have seen that teams are able to improve based on decisions created during the retrospective. From the depth study of Team Zulu we saw that through 77 retrospectives the team had created 343 actions which reflect improvement opportunities. Also all the teams in our breadth study created actions to improve some aspect of their work-life. It is clearly evidence that improvement opportunities are created through the retrospective. This seems to fit well with previous research \cite{Larsen2006, Dingsoyr2004, Drury2012} that the retrospective help identify improvement opportunities. 
 
 \paragraph{Improvement Implementation}
-The question if the improvement opportunities are actually implemented can also be seen through our studies. The results of our studies revealed that most of the teams were satisfied with their implementation rate. From team Zulu we learned that only 65 of the 343 actions were not yet implemented. It was also revealed that implementation could be a challenge, as was the case with team Charlie. We identified two methods that seemed to help overcome this challenge. The first was assigning responsible team members to each action. The second was SCRUM master follow-up of the actions. We have seen that retrospective practicing agile development teams are able to implement improvement opportunities confirming Derby and Larsen's \cite{Larsen2006} statement of retrospective helping team adapt. This is contradicting the research of Drury et. al. \cite{Drury2012} which finds that no real changes occur as a result of the retrospective. 
+T From team Zulu we learned that only 65 of the 343 actions were not yet implemented. It was also revealed that implementation could be a challenge, as was the case with team Charlie. We identified two methods that seemed to help overcome this challenge. The first was assigning responsible team members to each action. The second was SCRUM master follow-up of the actions. We have seen that retrospective practicing agile development teams are able to implement improvement opportunities confirming Derby and Larsen's \cite{Larsen2006} statement of retrospective helping team adapt. This is contradicting the research of Drury et. al. \cite{Drury2012} which finds that no real changes occur as a result of the retrospective. 
 
 \paragraph{Can Improve Efficiency}
 The retrospective practice can, as we have seen in multiple examples, improve the efficiency of teams conducting them. Team Echo's practice changes from SCRUM to KANBAN and then to modified SCRUM and Team Zulu's ``Bug-crunch day'' are just two of the examples we have seen that the teams have been able to improve their efficiency through the retrospective practice. This again confirms the previous literature \cite{Dingsoyr2004, Larsen2006, Kinoshita2008} that retrospectives are able to improve practices and contradicts the finding of Drury et. al. \cite{Drury2012} that retrospectives provide no real changes.
@@ -77,8 +77,7 @@ Many teams had a great wish to improve. As seen throughout our results the need 
 
 
 \subsubsection{Impediments}
-
-Some personalities could provide obstacles for the retrospective. We saw three examples of this. The first one was in team Zulu where cultural differences provided miscommunication and difficulty providing an open discussion in the retrospective. The second was in the department to team Charlie where some SCRUM masters had low enthusiasm for the retrospective practice and this could influence the rest of the teams as well. The third example were two senior developers with strong personalities, in team Charlie, that could hinder the other developers from voicing their opinions. These were the only three cases we saw in our studies, but further personalities may be investigated. Derby and Larsen \cite{Larsen2006} talks about personalities that take a lot of time and hinder others from taking part in the retrospective and this is reflected pretty well in the last example.
+ We saw three examples of impediments. In team Zulu where cultural differences provided miscommunication and difficulty providing an open discussion in the retrospective. The second was in the department to team Charlie where some SCRUM masters had low enthusiasm for the retrospective practice and this could influence the rest of the teams as well. The third example were two senior developers with strong personalities, in team Charlie, that could hinder the other developers from voicing their opinions. These were the only three cases we saw in our studies, but further personalities may be investigated. Derby and Larsen \cite{Larsen2006} talks about personalities that take a lot of time and hinder others from taking part in the retrospective and this is reflected pretty well in the last example.
 
 Even though most of the teams in our study was satisfied with the commitment from their teams, implementation of actions still could provide a challenge. As mentioned by several of the interviewees if the actions were not assigned to a specific person the action would not be implemented. This indicates that the team as a whole don't have the commitment to implementation of retrospective actions. Drury et. al. \cite{Drury2012} described several obstacles that fit with these results. Team members unwilling to commit and relying on SCRUM master, not implementing decisions or relying on others for decisions, and not taking ownership of decisions are all obstacles that could be identified through our research. However as mentioned this was only the case when the group as whole was assigned to a decision, when individuals of the group were assigned the teams were satisfied with the implementation rate. This still indicates however a lack of team commitment even though the consequences are dealt with. 
 
@@ -230,70 +229,38 @@ After observing that no teams practiced team level reflection of own learning an
 
 \subsection{Guidelines for Conducting Retrospectives}
 
-Through this study we have identified several characteristics that we believe will have positive impact on the conduction of the retrospective process in a modern team. These will be presented in a set of guidelines, followed by a short explanation of each point.
+Through this study we have identified several characteristics that we believe will have positive impact on the conduction of the retrospective process in a modern team. 
 
-\begin{itemize}
-	\setlength\itemsep{1pt}
-	\item External facilitating
-	\item Implementation of actions 
-	\item Address actions to name and visualize
-	\item Enthusiasm
-	\item Trust
-	\item Ownership
-	\item Experimentation
-	\item Reflection on own learning
-	\item Regular retrospectives
-	\item Measured varying of technique
-	\item Find root causes
-	\item Follow up implementations
-	\item Reflect on how to conduct own retrospective
-	\item Move beyond day-to-day decisions
-\end{itemize}
+\begin{table}[h]
+	\begin{center}
+		\caption{Guidelines for Conducting retrospective}
+		\label{table:Conducting retrospectives}
+		\begin{tabular}{p{0.3\textwidth} p{0.7\textwidth}}
+			\hline
+			\textit{Action} & \textit{Description} \\
+			\hline
+			External facilitating &  There are multiple approaches that could be used to arrange an external facilitator, an example would be switching SCRUM masters between teams in the company, another possibility would be using personnel from outside the company.\\
+			Implementation of actions & The ensuring implementation of actions appears critical for a team to have confidence and trust in the retrospective process. \\
+			Address actions to name and visualize &  attempts to conduct a good retrospective should attempt to ensure that actions are completed, and that this success is acknowledged by the team.  \\
+			Enthusiasm  & \\ 
+			
+			Trust &  The building of trust seems absolutely central to unlocking the potential of the retrospective session.\\
+			Ownership &   In order to facilitate this ownership a team should be empowered in their decision making, leading to them shaping their own work processes into something they own.\\
+			Experimentation & A retrospective should be open to allow experimentation in the following development iteration. We have observed this leads to several benefits for the teams in our analysis. \\
+			Measured varying of technique & \\
 
-\paragraph{External Facilitating}
-As described in \autoref{section:facilitator} we observed multiple instances in which the use of an external facilitator was positive to the team. There are multiple approaches that could be used to arrange an external facilitator, an example would be switching SCRUM masters between teams in the company, another possibility would be using personnel from outside the company.
+			Find root causes & This can lead to more effective decision making as underlying issues are targeted instead of superficial ones.  \\
 
-\paragraph{Implementation of Actions}
-The ensuring implementation of actions appears critical for a team to have confidence and trust in the retrospective process. Therefore attempts to conduct a good retrospective should attempt to ensure that actions are completed, and that this success is acknowledged by the team. As seen in our work with team Zulu this is very possible and can lead to a positive effect in the team. Implementation of actions feeds the positive loop described in \autoref{section:positive-loop-enthusiasm}.
-
-\paragraph{Address Actions to Name and Visualize}
-One step we observed that had a major impact on the implementation of actions was the follow-up protocol. In \autoref{table:follow-up-techique} we observe that the teams assigning name to an action are satisfied with their implementation of actions. Another positive step is the visualization of the actions.
-
-\paragraph{Follow up Implementations}
-A team should ensure that there is some sort of follow up that ensures that actions are implemented. For example this responsibility can fall to SCRUM master as seen in team Echo in \autoref{question-6}.
-
-\paragraph{Trust}
-The building of trust seems absolutely central to unlocking the potential of the retrospective session. Thus a team looking to improve should investigate possibilities relating to increasing the sense of trust between team members. One example of the positive impact this can have on a team can be seen in \autoref{question-21}, where team Delta improves team dynamic through a discussion enabled by the high level of trust in the team.
-
-\paragraph{Ownership}
-The generation of ownership has a very positive effect on the team's attitude towards retrospective. This is discussed in \autoref{section:positive-loop-enthusiasm}. In order to facilitate this ownership a team should be empowered in their decision making, leading to them shaping their own work processes into something they own.
-
-\paragraph{Experimentation}
-A retrospective should be open to allow experimentation in the following development iteration. We have observed this leads to several benefits for the teams in our analysis, this is described in more detail in \autoref{section:experiments-in-work-place}. 
-
-\paragraph{Reflection on Own Learning}
-Through our work we discovered that team level reflection on learning processes has little or no presence. The work done with team Zulu indicates that this reflection can provide benefits, and we elaborate our ideas for this characteristic in \autoref{section:Method-propsal}
-
-\paragraph{Regular Retrospective}
-Teams without regular retrospectives can be negatively affected in several ways, as described in \autoref{section:Retrospective-timespan}. Making sure there is not too long between retrospectives decreases the effect of memory bias as described in \autoref{section:valid-information}.
-
-\paragraph{Measured Varying of Technique}
-We got a wide range of answers when we investigated the use of techniques in a retrospective, as seen in \autoref{section:retrospective-practices-used}. Thus it seems advisable for a team to experiment with using different techniques in order to discover what works for them. One should be mindful of too much variation, as too much variation could steer focus over to the technique instead of the retrospective session
-
-\paragraph{Reflect on How to Conduct Own Retrospective} % (fold)
-A team can improve by reflecting how they can benefit from established theory, for example considering how they compare to Dingsøyr's approach elaborated on in \autoref{section:Dingsoyr-Approach-Introduction}.
-
-\paragraph{Find Root Causes}
-As described in \autoref{discussion:learning-impediments} some teams can benefit from increasing their focus on double-loop learning. This can lead to more effective decision making as underlying issues are targeted instead of superficial ones. Some techniques observed to find root causes are described in \autoref{question-13}.
-
-\paragraph{Move Beyond Day-to-Day Decisions}
-Our work has seen that a retrospective have a potential to move beyond operational decisions, this is for example shown in \autoref{section:decision-making-zulu}. A team mindful of this potential is better suited to improve from their retrospective.
+			Reflect on how to conduct own retrospective & Through our work we discovered that team level reflection on learning processes has little or no presence. The work done with team Zulu indicates that this reflection can provide benefits. \\
+			Move beyond day-to-day decisions & Our work has seen that a retrospective have a potential to move beyond operational decisions. A team mindful of this potential is better suited to improve from their retrospective. \\
  
-\section{Limitations}
-There are several limitations to this study. First and foremost is that the teams participating in the study is only recruited from Scandinavia, which could mean that the results of this study might not reflect for teams other places in the world. 
 
-Also only teams that were willing to participate could be studied. This could be a selection bias that potentially might impact the results.
+			\hline
+		\end{tabular}
+	\end{center}
+\end{table}
 
-Another limitation of this study could be the small sample size as we only have had one depth study and only seven interviews in our breadth study. This could mean that the results of this study do not necessarily reflect the general mass of practitioners. 
 
-The final limitation is the researchers own inexperience with this kind of research. This is the first time both researchers have conducted such a study, which could mean that some bias might have occurred.
+
+
+ 
